[package]
name = "bevy_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.0", features = ["dynamic"] }
bevy_prototype_lyon = "0.4.0"
rand = "0.8.4"
# bevy_rapier2d = { version = "0.12.0", features = [ "simd-stable", "render" ] }
bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier", rev = "27c945faa735cef641b3bc12851e22a564717425" }

[workspace]
resolver = "2"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
