[package]
name = "bevy_iced_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy_iced = "0.3"
iced = { version = "0.9.0", features = ["canvas"] }
iced_wgpu = "0.10"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
