[package]
name = "bevy_pixels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", default_features = false }
bevy_pixels = "0.7"
pixels = "0.10.0"
raqote = "0.8.1"
euclid = "0.22.7"
font-kit = { version="0.10.0" }
bytemuck = "1.12.3"
